# illuin

./: Cargo.toml  Dockerfile  Makefile  README.md  entrypoint.sh
.github/workflows/: CI.yml
src/: api_tests.rs  cli.rs  main.rs
src/routes/: img.rs  index.rs  mod.rs
static/: index.html
templates/: index.html.tera  uploaded.html.tera
